updated DBApp.updateTable to use pageInfo to find the page
Tested-by: Zeyad Mohamed Attia <85710632+zeyadattia5@users.noreply.github.com>

Working for unindexed tables only (for now)